work on better figures

--- a/quarto/_common_code.qmd
+++ b/quarto/_common_code.qmd
@@ -2,6 +2,28 @@
 #| output: false
 #| echo: false
 
+# Some style choices for `Plots.jl`
+
+empty_style = (xaxis=([], false),
+                yaxis=([], false),
+                framestyle=:origin,
+                legend=false)
+axis_style = (arrow=true, side=:head, line=(:gray, 1))
+text_style = (10,)
+fn_style =  (;line=(:black, 3))
+fn2_style =  (;line=(:red, 4))
+mark_style = (;line=(:gray, 1, :dot))
+
+domain_style = (;fill=(:orange, 0.35))
+range_style = (; fill=(:blue, 0.35))
+
+nothing
+```
+
+```{julia}
+#| output: false
+#| echo: false
+
 ## Formatting options are included here; not in CalculusWithJulia.WeaveSupport
 using QuizQuestions
 nothing
