--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -59,7 +59,7 @@ in a spirit similar to a section of a book. Just like a book, there
 are try-it-yourself questions at the end of each page. All have a
 limited number of self-graded answers. These notes borrow ideas from
 many sources, for example @Strang, @Knill, @Schey, @Thomas,
-@RogawskiAdams, several Wikipedia pages, and other sources.
+@RogawskiAdams, @Angenent, several Wikipedia pages, and other sources.
 
 These notes are accompanied by a `Julia` package `CalculusWithJulia`
 that provides some simple functions to streamline some common tasks
