--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -18,6 +18,15 @@
 
 
 
+@Misc{Angenent,
+  key = 	 {WisconsinCalculus},
+  author = 	 {Sigurd Angenent},
+  title = 	 {Wisconsin Calculus},
+  howpublished = {https://github.com/SigurdAngenent/WisconsinCalculus/tree/master},
+  year = 	 2012,
+  note = 	 {GNU Free Documentation License, Version 1.2}
+  }
+
 @Book{Schey,
   author = 	 {H.M. Schey},
   title = 	 {Div, Grad, Curl, and all that},
